--- a/app/views/framework_views/parts/framework_thirdparty_libs_includes.scala.html
+++ b/app/views/framework_views/parts/framework_thirdparty_libs_includes.scala.html
@@ -38,3 +38,5 @@
 <script type="text/javascript" src="@(assetsRootLocation)framework/lib/highcharts/highcharts.js"></script>
 <script type="text/javascript" src="@(assetsRootLocation)framework/lib/bootstrap-tour/js/bootstrap-tour.min.js"></script>
 <link href="@(assetsRootLocation)framework/lib/bootstrap-tour/css/bootstrap-tour.min.css" rel="stylesheet">
+<script type="text/javascript" src="@(assetsRootLocation)framework/lib/bootstrap-select/js/bootstrap-select.min.js"></script>
+<link href="@(assetsRootLocation)framework/lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet">
