--- a/app/views/framework_views/parts/framework_jquery_includes.scala.html
+++ b/app/views/framework_views/parts/framework_jquery_includes.scala.html
@@ -17,3 +17,5 @@
  *@
 @(assetsRootLocation: String)
 <script src="@(assetsRootLocation)framework/lib/jquery/jquery-1.11.1.min.js"></script>
+<script src="@(assetsRootLocation)framework/lib/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+<link href="@(assetsRootLocation)framework/lib/jquery-ui-1.12.1.custom/jquery-ui.min.css" rel="stylesheet">
