--- a/app/views/framework_views/parts/framework_thirdparty_libs_includes.scala.html
+++ b/app/views/framework_views/parts/framework_thirdparty_libs_includes.scala.html
@@ -40,3 +40,7 @@
 <link href="@(assetsRootLocation)framework/lib/bootstrap-tour/css/bootstrap-tour.min.css" rel="stylesheet">
 <script type="text/javascript" src="@(assetsRootLocation)framework/lib/bootstrap-select/js/bootstrap-select.min.js"></script>
 <link href="@(assetsRootLocation)framework/lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet">
+<script type="text/javascript" src="@(assetsRootLocation)framework/lib/datatables/datatables.min.js"></script>
+<link href="@(assetsRootLocation)framework/lib/datatables/datatables.min.css" rel="stylesheet">
+<script type="text/javascript" src="@(assetsRootLocation)framework/lib/datatables/extensions/yadcf/jquery.dataTables.yadcf.js"></script>
+<link href="@(assetsRootLocation)framework/lib/datatables/extensions/yadcf/jquery.dataTables.yadcf.css" rel="stylesheet">
