--- a/app/views/framework_views/parts/table/filtered_tableview.scala.html
+++ b/app/views/framework_views/parts/table/filtered_tableview.scala.html
@@ -58,7 +58,7 @@
         
         <div class="col-md-2 text-right">
           @if(exportAsExcelUrl!=null){
-            <a href="#" class="btn btn-primary" id="_@table.getId()_exportAsExcel"><i class="fa fa-download"></i></a>
+            <a href="#" class="btn btn-primary" id="_@table.getId()_exportAsExcel" data-toggle="tooltip" title="@parts.Msg("tooltip.export.excel")><i class="fa fa-download"></i></a>
           }
         </div>
 
