--- a/app/views/framework_views/parts/dropdownlist.scala.html
+++ b/app/views/framework_views/parts/dropdownlist.scala.html
@@ -32,7 +32,7 @@
 <div class="form-group @if(field.hasErrors) {has-error}">
    @if(fieldLabel != null && !fieldLabel.equals("")) {
         <label class="control-label" for="@field.id">
-               @fieldLabel@if(isRequired(field) || forceRequired){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}
+               @fieldLabel@if(isRequired(field) || (forceRequired != null && forceRequired)){&nbsp;<i style="color: red;" class="fa fa-asterisk"></i>}
         </label>
    }
     <select
@@ -41,7 +41,7 @@
       name="@field.name@if(multiple){[]}"
       @if(multiple){multiple}>
 
-      @if(!isRequired(field) && !forceRequired && !multiple){
+      @if(!isRequired(field) && (forceRequired == null || !forceRequired) && !multiple){
         <option value=""></option>
       }
       
